Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53639

qt3d-opensource-src-5.6.0/src/input/backend/qabstractphysicaldevicebackendnode.cpp:108: bad erase ?

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.7.0 Beta
    • Qt3D
    • None
    •  86cf0eca66e58e65a32d79669dd8f66bd4ebe098

    Description

      Source code is

      for (it = m_axisSettings.begin(); it != m_axisSettings.end(); ++it)

      { if (it->m_axisSettingsId == axisSettingsId) m_axisSettings.erase(it); }

      erase doesn't work like that. See any of the standard literature.

      Attachments

        For Gerrit Dashboard: QTBUG-53639
        # Subject Branch Project Status CR V

        Activity

          People

            lemire_p Paul Lemire
            dcb David Binderman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes