QAbstractPhysicalDeviceBackendNode: fix bad erase

Change-Id: Ie222eb59a9bcf53cfaf1b417241933961034d010
Task-number: QTBUG-53639
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>